# scVAEIT

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.ipynb  example.ipynb  plot.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  stale.yml
Reproducibility materials/: demo.ipynb
Reproducibility materials/data/: README.md  preprocess_data.R  preprocess_data.py
Reproducibility materials/ex1_bimodal/: pbmc_Mono_dimlatent.py  pbmc_Seurat.R  pbmc_external_scVAEIT.py  pbmc_totalVI.py
Reproducibility materials/ex2_trimodal/: dogma_MultiVI.py  dogma_scVAEIT.py
Reproducibility materials/ex3_intermediate_integration/: dogma_int_Seurat.R  dogma_int_scVAEIT.py
Reproducibility materials/ex5_multi_single_modal/: dogma_int_single.py
Reproducibility materials/result/ex3/full/: UINMF_embedding.csv
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/main_function/: VAEIT.rst  parameter.ipynb  prepare_data_input.ipynb
docs/source/tutorial/R/: DOGMAseq-RNA.RData  R_wrapper.R  imputation_peptide.ipynb  imputation_scRNAseq.ipynb
docs/source/tutorial/python/: imputation_1modality.ipynb  imputation_2modalities.ipynb  integration_3modalities.ipynb
docs/source/tutorial/python/result/3/: checkpoint  ckpt-10.index
ex1_bimodal/: pbmc_Seurat.R  pbmc_external_Seurat.R  pbmc_external_totalVI.py  pbmc_scVAEIT.py
ex2_trimodal/: dogma_Seurat.R  dogma_scVAEIT.py  dogma_totalVI.py
ex3_intermediate_integration/: dogma_int_Seurat.R  dogma_int_scVAEIT.py  dogma_int_scVAEIT_full.py
ex4_masking_prob/: pbmc_scVAEIT_prob.py
example/: imputation_1modality.ipynb  imputation_2modalities.ipynb  integration_3modalities.ipynb  prepare_data_input.ipynb
example/VAEIT in R/: R_wrapper.R  imputation_peptide.ipynb  imputation_scRNAseq.ipynb
example/result/checkpoint/: checkpoint  ckpt-10.index
result/ex3/checkpoint/: ckpt-10.index
result/ex3/full/: Seurat_embedding.csv
scVAEIT/: VAEIT.py  __init__.py  model.py  nn_utils.py  train.py  utils.py
src/scVAEIT/: __init__.py  train.py
