[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-packages = true
include = ["scVAEIT"]
exclude = ["/docs", "/tests", "/Reproducibility materials"]

[tool.hatch.build.targets.wheel]
packages = ["scVAEIT"]

[project]
name = "scVAEIT"
dynamic = ["version"]
description = "scVAEIT is a Python module of Variational autoencoder for single-cell mosaic integration and transfer learning."

dependencies = [
    "scikit-learn",
    "matplotlib",
    "pandas",
    "jupyter",
    "numpy",
    "tensorflow >= 2.12, < 2.16",
    "tensorflow-probability >= 0.12, < 0.24",
    "scanpy >= 1.9.2",
]
requires-python = ">=3.9"

maintainers = [
  {name = "Jin-Hong Du", email = "jinhongd@andrew.cmu.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}

classifiers = [

    "Programming Language :: Python :: 3",

    "License :: OSI Approved :: MIT License",

    "Intended Audience :: Developers",

    # Add more classifiers as needed

]

[tool.hatch.version]
path = "scVAEIT/__about__.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
