[metadata]
name = scVAEIT
version = attr: mypackage.__version__
description = scVAEIT is a Python module of Variational autoencoder for single-cell mosaic integration and transfer learning.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/jaydu1/scVAEIT
project_urls =
    Bug Tracker = https://github.com/jaydu1/scVAEIT/issues
    Changelog = https://github.com/jaydu1/scVAEIT/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers


[options]
packages = find:
python_requires = >=3.9
exclude =
    Reproducibility*
    examples*
    tools*
    docs*
    my_package.tests*
install_requires = 
    scikit-learn
    matplotlib
    pandas
    jupyter
    numpy
    tensorflow >= 2.12, < 2.16
    tensorflow-probability >= 0.12, < 0.24
    scanpy >= 1.9.2
    